<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MyNotesDisplayUpdateNoteActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mynotes_title_header"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/mynotes_update_message_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFF1BE"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/mynotes_new_message_content_header"
        android:textSize="34sp" />


    <EditText
        android:id="@+id/mynotes_update_message_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFF1BE"
        android:gravity="top|left"
        android:textSize="20sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:onClick="saveNote"
        android:text="@string/mynotes_button_update_note_save"
        app:backgroundTint="#4CAF50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="cancelUpdatingNoteAndGoBack"
            android:text="@string/mynotes_button_update_note_cancel"
            app:backgroundTint="#3F51B5" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="deleteThisNoteAndGoBack"
            android:text="@string/mynotes_button_update_note_delete"
            app:backgroundTint="#F44336" />
    </LinearLayout>


</LinearLayout>